Added another package keyword.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "url": "git+https://github.com/xazinji/caboodle.git"
   },
   "keywords": [
+    "wordpress-theme",
     "wordpress",
     "theme"
   ],
