--- a/package.json
+++ b/package.json
@@ -20,5 +20,12 @@
   "bugs": {
     "url": "https://github.com/xazinji/caboodle/issues"
   },
-  "homepage": "https://github.com/xazinji/caboodle#readme"
+  "homepage": "https://github.com/xazinji/caboodle#readme",
+  "devDependencies": {
+    "autoprefixer": "^10.4.2",
+    "laravel-mix": "^6.0.41",
+    "postcss": "^8.4.5",
+    "postcss-import": "^14.0.2",
+    "tailwindcss": "^3.0.18"
+  }
 }
