--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
   },
   "homepage": "https://github.com/xazinji/caboodle#readme",
   "devDependencies": {
+    "@prettier/plugin-php": "^0.17.6",
     "alpinejs": "^3.8.1",
     "autoprefixer": "^10.4.2",
     "laravel-mix": "^6.0.41",
     "postcss": "^8.4.5",
     "postcss-import": "^14.0.2",
+    "prettier": "^2.5.1",
     "tailwindcss": "^3.0.18"
   }
 }
