Added the BladeOne package to start emulating the blade templating logic in the WordPress theme.

--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,7 @@
             "email": "mitchell@xevon.in"
         }
     ],
-    "require": {}
+    "require": {
+        "eftec/bladeone": "^4.2"
+    }
 }
