Added a composer autoload for the classes we will be adding.

--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,10 @@
     ],
     "require": {
         "eftec/bladeone": "^4.2"
+    },
+    "autoload": {
+        "psr-4": {
+            "Caboodle\\": "includes/"
+        }
     }
 }
